nagios-plugins (1.4.14-4) UNRELEASED; urgency=low

  * Remove libmysqlclient12-dev from Build-Deps, as it's obsolete

 -- Jan Wagner <waja@cyconet.org>  Wed, 24 Mar 2010 20:24:51 +0100

nagios-plugins (1.4.14-3) unstable; urgency=low

  * Remove Sean and Guido from the Uploaders list, thanks for your work
  * Move postfix | sendmail-bin | exim4-daemon-heavy | exim4-daemon-light
    to Suggests, thanks to Glennie Vignarajah (CLoses: #574591)
  * Install NEWS.Debian and README.Debian* to the appropriate packages
  * Add 42_check_linux_raid_fix_rebuild.dpatch to return Warning when
    rebuilding volume, thanks to Christoph Martin (CLoses: #574612)

 -- Jan Wagner <waja@cyconet.org>  Wed, 24 Mar 2010 20:05:13 +0100

nagios-plugins (1.4.14-2) unstable; urgency=low

  * Cosmetic change to last changelog entry
  * Add some hints to NEWS.Debian about the use on non-linux archs
  * Bump Standards-Version to 3.8.4, no changes needed
  * Add 1.0 to debian/source/format
  * Add 43_check_http_large_pages_mleak.dpatch, taken from upstream, which
    fixes memory leaks on large files
  * Add trailing trunk/ at Vcs-Svn-field
  * Remove radiusclient1 from Dependencies, as check_radius seems not need it
  * Move check_mailq to nagios-plugins-standard, cause it depends
    postfix|sendmail|exim4 or qmail
    - Add "postfix | sendmail-bin | exim4-daemon-heavy | exim4-daemon-light" to
      Recommends of nagios-plugins-standard
  * Move remaining Depends binaries of nagios-plugins-standard to Recommends,
    keeping Depends we have used at linking (for now)

 -- Jan Wagner <waja@cyconet.org>  Mon, 15 Mar 2010 22:41:29 +0100

nagios-plugins (1.4.14-1) unstable; urgency=low

  * New upstream release
  * Added libmysqlclient16-dev to build-deps and moved libmysqlclient-dev to
    the first position (Closes: #538487)
  * Configure ps to use also etime with check_proc, thanks to
    Justin T Pryzby (Closes: #540107)