@@ -1,7 +1,0 @@
-FAQ
-NEWS
-README
-LEGAL
-REQUIREMENTS
-SUPPORT
-debian/README.Debian.plugins
