@@ -1,2 +1,8 @@
+FAQ
+NEWS
+README
+LEGAL
+REQUIREMENTS
+SUPPORT
 debian/NEWS.Debian
 debian/README.Debian
