@@ -1,3 +1,1 @@
-debian/NEWS.Debian
-debian/README.Debian
 debian/README.Debian.plugins
