@@ -1,3 +1,0 @@
-debian/NEWS.Debian
-debian/README.Debian
-debian/README.Debian.plugins
