@@ -1,0 +1,11 @@
+usr/share/doc/nagios-plugins-basic/NEWS.Debian.gz usr/share/doc/nagios-plugins/NEWS.Debian.gz
+usr/share/doc/nagios-plugins-basic/README.Debian.gz usr/share/doc/nagios-plugins/README.Debian.gz
+usr/share/doc/nagios-plugins-standards/README.Debian.plugins usr/share/doc/nagios-plugins/README.Debian.plugins
+usr/share/doc/nagios-plugins-basic/changelog.gz usr/share/doc/nagios-plugins/changelog.gz
+usr/share/doc/nagios-plugins-basic/examples usr/share/doc/nagios-plugins/examples
+usr/share/doc/nagios-plugins-basic/FAQ usr/share/doc/nagios-plugins/FAQ
+usr/share/doc/nagios-plugins-basic/NEWS.gz usr/share/doc/nagios-plugins/NEWS.gz
+usr/share/doc/nagios-plugins-basic/README usr/share/doc/nagios-plugins/README
+usr/share/doc/nagios-plugins-basic/LEGAL usr/share/doc/nagios-plugins/LEGAL
+usr/share/doc/nagios-plugins-basic/REQUIREMENTS usr/share/doc/nagios-plugins/REQUIREMENTS
+usr/share/doc/nagios-plugins-basic/SUPPORT usr/share/doc/nagios-plugins/SUPPORT
