@@ -1,6 +1,11 @@
 nagios-plugins (1.4.14-4) UNRELEASED; urgency=low
 
   * Remove libmysqlclient12-dev from Build-Deps, as it's obsolete
+  * Restructure shipped documentation
+    - Move all common stuff info nagios-plugins-basic
+    - Provide package specific documentation with the packages
+    - Provide symlinks from other packages
+  * Remove debian/TODO cause it't totally outdated
 
  -- Jan Wagner <waja@cyconet.org>  Wed, 24 Mar 2010 20:24:51 +0100
 
